@@ -7,6 +7,8 @@ v4.9 ??? September 2009
   - Added sip.getapi() and sip.setapi() to the Python API.
   - Mapped types can now act as a namespace for enums and static methods.
   - The /Array/ annotation can now be applied to classes and mapped types.
+  - Added the --arch flag to configure.py to specify which architectures are
+    included in MacOS/X universal binaries.
   - SIP is now also licensed under the GPL v2 and v3.
 
 v4.8.1 16th June 2009
